# Yglob

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
extras/glob/: CMakeLists.txt  Glob.cpp
extras/listfiles/: CMakeLists.txt  ListFiles.cpp
include/Yglob/: BitmaskOperators.hpp  Flags.hpp  GlobFlags.hpp  GlobMatcher.hpp  PathIterator.hpp  PathMatcher.hpp  Yglob.hpp  YglobDefinitions.hpp  YglobException.hpp
src/Yglob/: GlobElements.cpp  GlobElements.hpp  GlobMatcher.cpp  GlobPattern.cpp  GlobPattern.hpp  MatchGlobPattern.cpp  MatchGlobPattern.hpp  ParseGlobPattern.cpp  ParseGlobPattern.hpp  PathIterator.cpp  PathMatcher.cpp  PathPartIterator.cpp  PathPartIterator.hpp
tests/YglobTest/: Auto.hpp  CMakeLists.txt  TempFiles.cpp  TempFiles.hpp  test_GlobMatcher.cpp  test_GlobPattern.cpp  test_PathIterator.cpp  test_PathMatcher.cpp
